--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,8 @@ body, html {
 }
 
 body {
+    position: relative;
+    
     background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
 
     color: #FFFFFF;
