--- a/css/index.css
+++ b/css/index.css
@@ -208,8 +208,8 @@ h1, h2, h3 {
 }
 
 .splide__track {
-    height: 15vh;
-    width: 75%;
+    min-height: 15vh;
+    width: 100%;
     max-width: 500px;
     
     padding: 1vh;
@@ -226,6 +226,8 @@ h1, h2, h3 {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    
+    padding: 2vh;
 }
 
 .splide__arrows {
